test/typeCheckTest/pass/test8.ic
class MainWithInt {
	int main (string [] args) {
	
	}
}

class VoidMain {
	void main (string [] args) {
	
	}
}