test/typeCheckTest/fail/test21.ic
class BadLength {
	void main (string [] args) {
		int len = "Hi".length;
	}
}